Clean up Availablity measurement APIs to not use their own cache.  These are all cached by Hibernate in the MeasurementDAO.